crates/compiler/tests/parse_errors/record_type_unfinished.elm
module Main exposing (..)
x : { a : Int
x = 1
